Ensure the product thumb stays visible on tap

--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -223,6 +223,7 @@
 
 						@at-root .is_mobile#{&} {
 							opacity: 1;
+							visibility: visible;
 						}
 					}
 
