--- a/woocommerce.css
+++ b/woocommerce.css
@@ -295,7 +295,8 @@
     .woocommerce ul.products li.product .loop-product-thumbnail:hover img {
       opacity: 0.25; }
       .is_mobile.woocommerce ul.products li.product .loop-product-thumbnail:hover img {
-        opacity: 1; }
+        opacity: 1;
+        visibility: visible; }
     .woocommerce ul.products li.product .loop-product-thumbnail:hover .add_to_cart_button,
     .woocommerce ul.products li.product .loop-product-thumbnail:hover .product-quick-view-button,
     .woocommerce ul.products li.product .loop-product-thumbnail:hover .product_type_grouped,
